--- a/frontend/kabina-dxc-project/angular.json
+++ b/frontend/kabina-dxc-project/angular.json
@@ -24,9 +24,11 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/datatables.net-dt/css/jquery.dataTables.css"
             ],
-            "scripts": [],
+            "scripts": ["../node_modules/jquery/dist/jquery.min.js",
+              "node_modules/datatables.net/js/jquery.dataTables.js"],
             "es5BrowserSupport": true
           },
           "configurations": {
