--- a/frontend/kabina-dxc-project/package.json
+++ b/frontend/kabina-dxc-project/package.json
@@ -27,6 +27,7 @@
     "datatables.net": "^1.10.19",
     "datatables.net-dt": "^1.10.19",
     "jquery": "^3.4.1",
+    "ngx-pagination": "^4.1.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
