--- a/frontend/kabina-dxc-project/angular.json
+++ b/frontend/kabina-dxc-project/angular.json
@@ -27,7 +27,8 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/datatables.net-dt/css/jquery.dataTables.css"
             ],
-            "scripts": ["../node_modules/jquery/dist/jquery.min.js",
+            "scripts": [
+              "node_modules/jquery/dist/jquery.js",
               "node_modules/datatables.net/js/jquery.dataTables.js"],
             "es5BrowserSupport": true
           },
